[gd_scene load_steps=12 format=3 uid="uid://b1d8pl3bfcspd"]

[ext_resource type="Script" path="res://Scripts/mushroom.gd" id="1_r03pf"]
[ext_resource type="Texture2D" uid="uid://b756n5esqygut" path="res://Assets/Enemies/Mushroom/Run (32x32).png" id="1_rp6jb"]
[ext_resource type="Texture2D" uid="uid://cy726640m3msx" path="res://Assets/Enemies/Mushroom/Idle (32x32).png" id="2_p0bxw"]
[ext_resource type="Texture2D" uid="uid://10xn70ijrqoy" path="res://Assets/Enemies/Mushroom/Hit.png" id="3_2mhxj"]
[ext_resource type="PackedScene" uid="uid://dvv1rxkiikw0d" path="res://prefabs/hitbox.tscn" id="5_cslo7"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_61tdx"]
radius = 6.99992
height = 27.9975

[sub_resource type="Animation" id="Animation_tryvx"]
resource_name = "Idle"
length = 2.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../texture:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_p0bxw")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../texture:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [14]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../texture:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3, 2.4, 2.5, 2.6, 2.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13]
}

[sub_resource type="Animation" id="Animation_shdae"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../texture:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_rp6jb")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../texture:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [16]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../texture:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_t44it"]
resource_name = "hit"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../texture:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_2mhxj")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../texture:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../texture:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="Animation" id="Animation_18cpx"]
resource_name = "run"
length = 1.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../texture:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_rp6jb")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../texture:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [16]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../texture:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gm0xd"]
_data = {
"Idle": SubResource("Animation_tryvx"),
"RESET": SubResource("Animation_shdae"),
"hit": SubResource("Animation_t44it"),
"run": SubResource("Animation_18cpx")
}

[node name="Mushroom" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 9
script = ExtResource("1_r03pf")

[node name="texture" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("1_rp6jb")
hframes = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-3.72529e-09, 9)
rotation = -1.57568
shape = SubResource("CapsuleShape2D_61tdx")
metadata/_edit_group_ = true

[node name="Anima" type="AnimationPlayer" parent="."]
root_node = NodePath("../CollisionShape2D")
autoplay = "run"
libraries = {
"": SubResource("AnimationLibrary_gm0xd")
}

[node name="ray_wall" type="RayCast2D" parent="."]
position = Vector2(0, 9)
target_position = Vector2(-16, 0)
collision_mask = 8

[node name="hitbox" parent="." instance=ExtResource("5_cslo7")]
modulate = Color(1, 1, 0.0235294, 1)
position = Vector2(0, -1)

[node name="Collision" parent="hitbox" index="0"]
position = Vector2(0, 2)

[connection signal="animation_finished" from="Anima" to="." method="_on_anima_animation_finished"]
[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered"]

[editable path="hitbox"]
